--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -187,6 +187,7 @@
             </div>
         </div>
     </div>
+<button onclick="window.location.href='{{normalUserReviewChange}}?id={{ review.id }}'">리뷰 수정</button>
 </div>
 <br>
 <script>var is_writer = {{is_writer}};</script>
