--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -12,10 +12,10 @@
 <div id="reviewHead" style = "height:32.8%; ">
     <div style ="margin:15px; height:100%">
         <div style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
-            {% if review.representiveImage == 'None' %}
-                <img src="{% static 'images/' %}{{review.representiveImage}}.png">
-            {% else %}
+            {% if review.representiveImage is None %}
                 <img src="{% static 'images/iconImage/' %}no-photo.png" style="width:100%; height:100%;">
+            {% else %}
+                <img src="{% static 'images/reviewImage/' %}{{review.representiveImage}}" style="width:100%; height:100%;">
             {% endif %}
         </div>
         <div id="mapDiv" style = "display:inline-block;"></div>
