--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -3,6 +3,7 @@
 
 {% block main_contents %}
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <div id="icons" style="position:relative; display:none; float:left; height:500px; width:200px; border:1px solid green;"></div>
     <div style="width: 100%; height: 100%;">
         <form id="text_review" action="#" method="POST" enctype="multipart/form-data">
@@ -12,10 +13,6 @@
                         text-align: center; margin: 0 auto" id="review_address">주소</div>
                 <input id="id_address" style="float: right; border-color: #A23355;
                         flex:1" name="address" required>
-                <script>
-                    let a = (document.getElementById('room_search_filter').offsetHeight/16).toString()+'rem';
-                    document.getElementById('room_search_filter').style.fontSize=a;
-                </script>
             </div>
             <div id="tr2">
                 <div style="height: 9.09%; width: 100%; margin-bottom: 2.604%;">
@@ -70,6 +67,33 @@
         const realUpload = document.querySelector('.real-upload');
         realUpload.addEventListener('change', getImageFiles);
 
+        {#  리뷰 작성/수정 구분  #}
+        function reviewChangePage(){
+            const urlSearch = new URLSearchParams(location.search);
+            if(urlSearch.has('id')){
+                document.getElementById('id_address').value= "{{ room.address }}"
+                document.getElementById('id_title').value= "{{ review.reviewTitle }}"
+                let images = ''
+                {% for img in review.additionalImage %}
+                    images += "{{ img }}" // 이미지에 대한 소스코드는 이후 수정 예정
+                {% endfor %}
+                document.getElementsByClassName('image-preview')[0].innerHTML = images
+                {#document.getElementById('id_rent').value= "{{ review.rent }}"#}
+                {#document.getElementById('id_deposit').value= "{{ review.deposit }}"#}
+                {#document.getElementById('id_monthlyRent').value= "{{ review.monthlyRent }}"#}
+                {#document.getElementById('id_roomSize').value= "{{ review.roomSize }}"#}
+                {#document.getElementById('id_humidity').value= "{{ review.humidity }}"#}
+                {#document.getElementById('id_soundproof').value= "{{ review.soundproof }}"#}
+                {#document.getElementById('id_lighting').value= "{{ review.lighting }}"#}
+                {#document.getElementById('id_cleanliness').value= "{{ review.cleanliness }}"#}
+                {#document.getElementById('review_sentence').innerText= "{{ review.reviewSentence|safe }}"#}
+                let text = '';
+                {% for sentence in review.reviewSentence %}
+                    text += "{{ sentence }}"
+                {% endfor %}
+                document.getElementById('review_sentence').innerText = text
+            }
+        }
     </script>
     <link rel="stylesheet" href="{% static 'css/normalUserReviewWriteTemplate.css' %}">
     <script type="text/javascript" src="{% static 'js/normalUserReviewWriteTemplate.js' %}"></script>
