--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -11,12 +11,8 @@
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ javakey|java_key }}&libraries=services&autoload=true"></script>
 <div id="reviewHead" style = "height:32.8%; ">
     <div style ="margin:15px; height:100%">
-        <div style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
-            {% if review.representiveImage is None %}
-                <img src="{% static 'images/iconImage/' %}no-photo.png" style="width:100%; height:100%;">
-            {% else %}
-                <img src="{% static 'images/reviewImage/' %}{{review.representiveImage}}" style="width:100%; height:100%;">
-            {% endif %}
+        <div id="review_image" style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
+            <img src="{% static 'images/reviewImage/' %}{{review.representiveImage|defaultImage}}" style="width:100%; height:100%;">
         </div>
         <div id="mapDiv" style = "display:inline-block;"></div>
         <script>
