리뷰 수정 기능 작성/리뷰 열람의 대표 이미지 수정

--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -111,7 +111,7 @@
         </div>
         <div style="height:100%; width:4.15%; border-right:1px solid #B3B3B3;">
             <div id="review_update" style="display:flex; align-items:center; justify-content:center; height:100%; width:100%;">
-                <a>수정</a>
+                <a href="/normal_user_review_change/?id={{review.id}}">수정</a>
             </div>
         </div>
         <div style="height:100%; width:4.15%;">
