--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -16,7 +16,7 @@
             </div>
             <div id="tr2">
                 <div style="height: 9.09%; width: 100%; margin-bottom: 2.604%;">
-                    <input style="height:100%;width: 100%; text-align: left; border-color: #B3B3B3;" name="title"
+                    <input id="id_title" style="height:100%;width: 100%; text-align: left; border-color: #B3B3B3;" name="title"
                            placeholder="제목을 입력하세요">
                 </div>
                 <div style="height: 58.7%; border:2px solid #B3B3B3;">
@@ -69,7 +69,7 @@
 
         {#  리뷰 작성/수정 구분  #}
         function reviewChangePage(){
-            const urlSearch = new URLSearchParams(location.search);
+            console.log(window.location.pathname);
             if(window.location.pathname==='/normal_user_review_change/'){
                 document.getElementById('id_address').value= "{{ room.address }}"
                 document.getElementById('id_title').value= "{{ review.reviewTitle }}"
@@ -89,11 +89,12 @@
                 {#document.getElementById('review_sentence').innerText= "{{ review.reviewSentence|safe }}"#}
                 let text = '';
                 {% for sentence in review.reviewSentence %}
-                    text += "{{ sentence }}"
+                    text += "{{ sentence }}\n"
                 {% endfor %}
                 document.getElementById('review_sentence').innerText = text
             }
         }
+        reviewChangePage()
     </script>
     <link rel="stylesheet" href="{% static 'css/normalUserReviewWriteTemplate.css' %}">
     <script type="text/javascript" src="{% static 'js/normalUserReviewWriteTemplate.js' %}"></script>
