--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -13,12 +13,7 @@
             {% for review in paged_review %}
                 <div class="review" style="cursor: default;">
                     <div class="review_image">
-                        {% if review.representiveImage == 'None' %}
-                            <img src="{% static 'images/' %}{{review.representiveImage}}.png">
-                        {% else %}
-                            {# 리뷰 대표 이미지 없을 경우 다른 이미지 출력 #}
-                            <img src="{% static 'images/iconImage/' %}no-photo.png" style="width:100%; height:100%;">
-                        {% endif %}
+                        <img src="{% static 'images/reviewImage/' %}{{review.representiveImage|defaultImage}}" style="height:100%; width:100%;">
                     </div>
                     <div class="review_info">
                         <div class="review_title" style="color:black; cursor: pointer;">
