리뷰 작성-주소 입력 되돌림 / 사진 삭제 시 서버에서 지워지도록 수정

--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -189,7 +189,7 @@
         </div>
         <div id="rec_rep">
             <div id="rec_icon">
-
+                <a><img src="{% static 'images/iconImage/' %}recommend.png"></a>
             </div>
             <div id="rec_button">
                 <div style="display:flex; align-items:center; justify-content:center; height:100%; width:100%;">
@@ -197,7 +197,7 @@
                 </div>
             </div>
             <div id="rep_icon">
-
+                <a><img src="{% static 'images/iconImage/' %}report.png"></a>
             </div>
             <div id="rep_button">
                 <div style="display:flex; align-items:center; justify-content:center; height:100%; width:100%;">
