소개 페이지 수정, 리뷰 수정 시 버튼을 '리뷰 수정'으로 변경

--- a/static/css/baseTemplate.scss
+++ b/static/css/baseTemplate.scss
@@ -27,6 +27,18 @@ div#midContent{
   height:82.5%;
   width:100%;
 }
+#leftSideMenu{
+  border-right:2px solid #B3B3B3;
+  border-left:none;
+  width:20%;
+}
+#mainDiv{
+  width:60%;
+}
+#rightSideMenu{
+  border-left:2px solid #B3B3B3;
+  width:20%;
+}
 div.middle{
   display:inline-block;
   float:left;
