--- a/templates/base.html
+++ b/templates/base.html
@@ -38,15 +38,15 @@
         {% endblock %}
     </div>
     <div id="midContent">
-        <div class="middle" id="leftSideMenu" style="border-right:2px solid #B3B3B3; border-left:none; width:20%; ">
+        <div class="middle" id="leftSideMenu">
             {% block left_side_bar %}
             {% endblock %}
         </div>
-        <div class="middle" id="mainDiv" style="width:60%;">
+        <div class="middle" id="mainDiv">
             {% block main_contents %}
             {% endblock %}
         </div>
-        <div class="middle" id="rightSideMenu" style="border-left:2px solid #B3B3B3; width:20%;">
+        <div class="middle" id="rightSideMenu">
             {% block right_side_bar %}
             {% endblock %}
         </div>
