--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -1,13 +1,9 @@
 {% extends 'normal_user_base.html' %}
 {% load index static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>소개</title>
-</head>
 {% block main_contents %}
     <img width="100%" src="{% static 'images/iconImage/intro.png' %}" alt="로고 이미지">
 {% endblock %}
-</html>
+{% block right_side_bar %}
+<link rel="stylesheet" href="{% static 'css/introduction.css' %}">
+{% endblock %}
