--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,15 @@
 {% url 'infoCheck' as infoCheck %}
 {% url 'normalUserReviewSearch' as normalUserReviewSearch %}
 {% url 'normalUserReviewWrite' as normalUserReviewWrite %}
+{% url 'normalUserRoomWritePage' as normalUserRoomWritePage %}
+{% url 'normalUserRoomWrite' as normalUserRoomWrite %}
 {% url 'normalUserRoomSearch' as normalUserRoomSearch %}
 {% url 'normalUserReviewRead' as normalUserReviewRead %}
 {% url 'normalUserReviewChange' as normalUserReviewChange %}
 {% url 'normalUserReviewUpdate' as normalUserReviewUpdate %}
 {% url 'wroteReviews' as wroteReviews %}
 {% url 'introduction' as introduction %}
-{% url 'roomWrite' as roomWrite %}
+{% url 'normalUserRoomWrite' as normalUserRoomWrite %}
 {% url 'roomRead' as roomRead %}
 
 <!DOCTYPE html>
