--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -41,8 +41,10 @@ $(document).ready(function(){
                 <div class="pop-img" style="height:20%;">
                     <img class="left-side-room-img" style="width:100%; height:100%;" src="{% static 'images/' %}{{ popular_review.additionalImage|first }}">
                 </div>
-                <div style = "height:50%;">
-                    <span>리뷰 내용 : {{ popular_review.reviewSentence }}</span>
+                <div style = "display:flex; justify-content:center; height:50%;width:100%;">
+                    <div style="width:70%;">
+                        <span>리뷰 내용 : {{ popular_review.reviewSentence }}</span>
+                    </div>
                 </div>
                 <div style = "height:10%;">
                     <div style="height:100%; display:flex; align-items:center;">
@@ -72,8 +74,10 @@ $(document).ready(function(){
                 <div class="pop-img" style="height:20%;">
                     <img class="left-side-room-img" style="width:100%; height:100%;" src="{% static 'images/' %}{{ latest_review.additionalImage|first }}">
                 </div>
-                <div style = "height:50%;">
-                    <span>리뷰 내용 : {{ latest_review.reviewSentence }}</span>
+                <div style = "display:flex; justify-content:center; height:50%;width:100%;">
+                    <div style="width:70%;">
+                        <span>리뷰 내용 : {{ latest_review.reviewSentence }}</span>
+                    </div>
                 </div>
                 <div style = "height:10%;">
                     <div style="height:100%; display:flex; align-items:center;">
