--- a/static/css/normalUserReviewListTemplate.scss
+++ b/static/css/normalUserReviewListTemplate.scss
@@ -4,20 +4,24 @@ a.link-secondary {
   text-decoration: none;
 }
 #reviews_div {
-  height: 100%;
+  height: 89.4%;
 }
-
 #reviews{
+  height: 100%;
   overflow-y:scroll;
   overflow-x:hidden;
 }
-#reviews_div::-webkit-scrollbar{
-  width:18px;
+#reviews::-webkit-scrollbar{
+  width:16px;
 }
-#reviews_div::-webkit-scrollbar-thumb{
+#reviews::-webkit-scrollbar-thumb{
+  width:8px;
   background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:4px solid transparent;
+  border-radius:12px;
 }
-#reviews_div::-webkit-scrollbar-track{
+#reviews::-webkit-scrollbar-track{
   background-color:#FFFFFF;
 }
 .review{
