--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -13,25 +13,27 @@
 }
 
 #mainDiv::-webkit-scrollbar {
-  width: 12px;
+  width: 16px;
 }
 
 #mainDiv::-webkit-scrollbar-thumb {
+  width: 8px;
   background-color: #C6C6C6;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+  border-radius: 8px;
 }
 
 #mainDiv::-webkit-scrollbar-track {
   background-color: #FFFFFF;
 }
 
-#icon {
-  height: 228px;
+#reviews_div {
+  height: 100%;
 }
 
-#reviews {
-  height: 100%;
-  overflow-y: hidden;
-  padding-left: 5.7%;
+#icon {
+  height: 228px;
 }
 
 #review_table {
