--- a/static/css/normalUserReviewReadTemplate.scss
+++ b/static/css/normalUserReviewReadTemplate.scss
@@ -12,21 +12,23 @@
     overflow-x:hidden;
 }
 #mainDiv::-webkit-scrollbar{
-  width:12px;
+  width:16px;
 }
 #mainDiv::-webkit-scrollbar-thumb{
+  width:8px;
   background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:4px solid transparent;
+  border-radius:8px;
 }
 #mainDiv::-webkit-scrollbar-track{
   background-color:#FFFFFF;
 }
+#reviews_div {
+  height: 100%;
+}
 #icon{
     height:228px;
-}
-#reviews{
-    height:100%;
-    overflow-y:hidden;
-    padding-left: 5.7%;
 }
 #review_table{
     width:87.847%;
