--- a/static/css/normalUserRoomReadTemplate.css
+++ b/static/css/normalUserRoomReadTemplate.css
@@ -9,9 +9,30 @@
   height: 11.1%;
 }
 
-div#reviews_div {
+#mainDiv {
+  height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
+}
+
+#mainDiv::-webkit-scrollbar {
+  width: 16px;
+}
+
+#mainDiv::-webkit-scrollbar-thumb {
+  width: 8px;
+  background-color: #C6C6C6;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+  border-radius: 8px;
+}
+
+#mainDiv::-webkit-scrollbar-track {
+  background-color: #FFFFFF;
+}
+
+#reviews_div {
+  height: 100%;
 }
 
 /*# sourceMappingURL=normalUserRoomReadTemplate.css.map */
