--- a/static/css/normalUserRoomReadTemplate.scss
+++ b/static/css/normalUserRoomReadTemplate.scss
@@ -1,13 +1,30 @@
 @import "color.scss";
 #reviewInfo{
-    height:32.8%;
-    width:100%;
+  height:32.8%;
+  width:100%;
 }
 #mid{
-    outline:2px solid #B3B3B3;width:100%;
-    height:11.1%
+  outline:2px solid #B3B3B3;width:100%;
+  height:11.1%
 }
-div#reviews_div{
-    overflow-y:scroll;
-    overflow-x:hidden;
+#mainDiv{
+  height:100%;
+  overflow-y:scroll;
+  overflow-x:hidden;
+}
+#mainDiv::-webkit-scrollbar{
+  width:16px;
+}
+#mainDiv::-webkit-scrollbar-thumb{
+  width:8px;
+  background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:4px solid transparent;
+  border-radius:8px;
+}
+#mainDiv::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
+}
+#reviews_div {
+  height: 100%;
 }
