--- a/static/css/normalUserReviewReadTemplate.scss
+++ b/static/css/normalUserReviewReadTemplate.scss
@@ -55,7 +55,7 @@
     width:47.43%;
     text-align:left;
 }
-#address{
+#review_address{
     border-right:1px solid #B3B3B3;
     width:40.12%;
     text-align:right;
