--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -104,7 +104,7 @@
                 &nbsp작성자 : {{review.reviewWriter}}
             </div>
         </div>
-        <div id="address">
+        <div id="review_address">
             <div style="display:flex; align-items:center; height:100%; width:100%;">
                 <span>{{review.address}}&nbsp&nbsp</span>
             </div>
