--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -12,10 +12,9 @@
                         text-align: center; margin: 0 auto" id="review_address">주소</div>
                 <input id="id_address" style="float: right; border-color: #A23355;
                         flex:1" name="address" required>
-                <script>
-                    let a = (document.getElementById('room_search_filter').offsetHeight/16).toString()+'rem';
-                    document.getElementById('room_search_filter').style.fontSize=a;
-                </script>
+                <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
+                        text-align: center; margin: 0 auto" id="review_postcode">우편번호</div>
+                <input id="id_postcode" style="float: right; border-color: #A23355; width:20%;" name="postcode" required>
             </div>
             <div id="tr2">
                 <div style="height: 9.09%; width: 100%; margin-bottom: 1.302%;">
