마이페이지 리뷰 목록 출력 수정

--- a/static/css/normalUserReviewListTemplate.css
+++ b/static/css/normalUserReviewListTemplate.css
@@ -31,7 +31,8 @@ a.link-secondary {
 }
 
 .review {
-  width: 100%;
+  margin-left: 6.25%;
+  width: 74.48%;
   height: 21.47%;
   padding-top: 2.6%;
   padding-bottom: 2.6%;
