--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -163,7 +163,11 @@ $(document).ready(function(){
 
                     // 인포윈도우로 장소에 대한 설명을 표시합니다
                     var infowindow = new kakao.maps.InfoWindow({
-                        content: '<div style="width:150px;text-align:center;padding:6px 0;">'+ room_info + '</div>'
+                        content: `<div style="width:150px; text-align:center; padding:6px 0; cursor: pointer" ` +
+                            `onclick="window.location.replace(`+
+                            `'{{ roomRead }}?roomId=` +
+                            value.id +
+                            `')" >`+ room_info + `</div>`
                     });
 
                     infowindow.open(map, marker);
