--- a/static/css/normalUserInfoCheckTemplate.css
+++ b/static/css/normalUserInfoCheckTemplate.css
@@ -2,7 +2,7 @@ div#others {
   border-bottom: 2px solid #842029;
 }
 
-#reviews_div {
+#reviews_div1 {
   width: 100%;
   heigth: 100%;
 }
@@ -28,6 +28,27 @@ input#id_user_warn_count {
 
 #info {
   color: silver;
+}
+
+#mainDiv {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+#mainDiv::-webkit-scrollbar {
+  width: 16px;
+}
+
+#mainDiv::-webkit-scrollbar-thumb {
+  width: 8px;
+  background-color: #C6C6C6;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+  border-radius: 8px;
+}
+
+#mainDiv::-webkit-scrollbar-track {
+  background-color: #FFFFFF;
 }
 
 /*# sourceMappingURL=normalUserInfoCheckTemplate.css.map */
